# GoGame

./: .gitignore  README.md  build_release.bat  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: check-versions.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: game.rs  main.rs
